# EventAccessArrayPP

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  event_access_array.hpp
tests/: CMakeLists.txt  basic_events.cpp  init.cpp
